--- a/src/v001/MDK-ARM/v001.uvprojx
+++ b/src/v001/MDK-ARM/v001.uvprojx
@@ -555,6 +555,11 @@
               <FileType>1</FileType>
               <FilePath>..\Applications\app_test.c</FilePath>
             </File>
+            <File>
+              <FileName>app.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Applications\app.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
