--- a/src/v001/MDK-ARM/v001.uvprojx
+++ b/src/v001/MDK-ARM/v001.uvprojx
@@ -505,6 +505,11 @@
               <FileType>1</FileType>
               <FilePath>..\System\sys_gui.c</FilePath>
             </File>
+            <File>
+              <FileName>sys_gui_menu.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\System\sys_gui_menu.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
