--- a/src/v001/MDK-ARM/v001.uvprojx
+++ b/src/v001/MDK-ARM/v001.uvprojx
@@ -575,6 +575,11 @@
               <FileType>1</FileType>
               <FilePath>..\Applications\app.c</FilePath>
             </File>
+            <File>
+              <FileName>file_manager.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Applications\file_manager.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
